--- a/src/pages/posts/using-mdx.mdx
+++ b/src/pages/posts/using-mdx.mdx
@@ -1,8 +1,14 @@
 ---
+layout: ../../layouts/MarkdownPostLayout.astro
 title: 'Using MDX'
 description: 'Lorem ipsum dolor sit amet'
 pubDate: 'Jul 02 2022'
-heroImage: '/blog-placeholder-5.webp'
+
+author: "Astro Learner"
+image:
+  url: "/blog-placeholder-5.webp"
+  alt: "The Astro logo with the word One."
+tags: ["astro", "blogging", "learning in public"]
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
